2007-09-14  Philip Van Hoof  <pvanhoof@gnome.org>

	* TnyCamelSendQueue's sent-msg signal emission (some corrections)
	* Small locking problem when requesting the unread-count of a
	TnyCamelFolder

2007-09-13  Jose Dapena Paz  <jdapena@igalia.com>

	* libtinymail/tny-folder.c: Remove assertion that expects folder 
	names to have 1 character at least (at least in my IMAP server 
	we've got empty strings as valid imap folders).

	* libtinymail-camel/tny-camel-msg-header-priv.h: Add internal API
	to set a decorated header (at least for updating flag values).
	
	* libtinymail-camel/tny-camel-msg-header.c: Now we can set an 
	internal decorated TnyHeader instance. For flags operations, 
	we'll set/unset/get also the decorated header.
	
	* libtinymail-camel/tny-camel-partial-msg-receive-strategy.c: Now
	we set the folder header as decorated by the msg header. This way 
	the flags are set correctly in folder when we set a flag from the 
	header obtained from the message.
	
	* libtinymail-camel/tny-camel-full-msg-receive-strategy.c: Now we 
	set the folder header as decorated by the msg header.


2007-09-13  Philip Van Hoof  <pvanhoof@gnome.org>

	* Unread count improvements for IMAP folders
	* Unread count improvements for POP folders
	* Marking messages that can't be found anymore as expunged on POP
	* Fixed compilation errors in NSS support
	* Added user_data parameter to tny_camel_account_set_online



2007-09-12  Philip Van Hoof  <pvanhoof@gnome.org>

	* POP improvements, retrying when failed
	* Fixed a locking problem

2007-09-11  Philip Van Hoof  <pvanhoof@gnome.org>

	* Bugfix when determining Push E-mail capabilities
	* The service pointer of the OpenSSL stream implementation is now
	available in the alert functions
	* Performance improvement in POP3's sync operation
	* The CACHED and PARTIAL flags of received messages

2007-09-10  Philip Van Hoof  <pvanhoof@gnome.org>

	* Bugfix when deleting a local folder
	* Cyclic reference adding, fixed in TnyCamelFolder and